--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ng-pick-datetime",
-  "version": "7.0.0",
+  "name": "ng-buildeye-pick-datetime",
+  "version": "7.0.11",
   "description": "Angular Date Time Picker",
   "keywords": [
     "Angular",
